TK: update code responsive tiki detail

--- a/tiki/index.html
+++ b/tiki/index.html
@@ -947,6 +947,7 @@
             <div class="container_suggest_today_body">
                 <ul class="list_container_suggest_today_body">
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/1.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -967,8 +968,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                    </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/2.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -989,8 +992,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                    </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/3.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1011,8 +1016,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/4.png" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1033,8 +1040,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/5.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1055,8 +1064,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/6.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1077,8 +1088,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/7.png" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1099,8 +1112,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/8.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1121,8 +1136,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/9.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1143,8 +1160,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/10.png" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1165,8 +1184,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/11.png" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1187,8 +1208,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/12.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1209,8 +1232,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/13.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1231,8 +1256,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/14.png" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1253,8 +1280,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/15.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1275,8 +1304,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/16.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1297,8 +1328,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/17.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1319,8 +1352,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/18.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1341,8 +1376,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/19.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1363,8 +1400,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/20.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1385,8 +1424,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/21.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1407,8 +1448,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/22.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1429,8 +1472,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/23.png" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1451,8 +1496,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/24.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1473,8 +1520,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/25.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1495,8 +1544,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/26.png" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1517,8 +1568,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/27.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1539,8 +1592,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/28.png" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1561,8 +1616,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/29.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1583,8 +1640,10 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                     <li class="container_suggest_today_body_item">
+                        <a href="detail.html">
                         <img src="image/suggestion_img/30.jpg" alt="">
                         <div class="infor_suggest_today">
                             <span class="title">
@@ -1605,6 +1664,7 @@
                                 <span class="percent_discount">65%</span>
                             </div>
                         </div>
+                        </a>
                     </li>
                 </ul>
                 <div class="view_more"><a href="#">Xem thêm</a></div>
