TK:Done Call API

--- a/tiki/index.html
+++ b/tiki/index.html
@@ -774,11 +774,7 @@
 
     </section>
     <!-------------start section slide after brand auth-------------->
-    <section class="slide_after_brand_auth">
-        <div class="grid wide">
 
-        </div>
-    </section>
     <!-------------start section list featured-------------->
     <section class="list_featured">
         <div class="grid wide">
@@ -945,8 +941,8 @@
                 </div>
             </div>
             <div class="container_suggest_today_body">
-                <ul class="list_container_suggest_today_body">
-                    <li class="container_suggest_today_body_item">
+                <ul class="list_container_suggest_today_body " id="ngan">
+                  <!--   <li class="container_suggest_today_body_item">
                         <a href="detail.html">
                         <img src="image/suggestion_img/1.jpg" alt="">
                         <div class="infor_suggest_today">
@@ -1665,7 +1661,7 @@
                             </div>
                         </div>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="view_more"><a href="#">Xem thêm</a></div>
             </div>
